# rust-web-app

./: .env.example  .gitignore  Cargo.toml  README.md  test.sh
email_templates/: README.md
jelly/: Cargo.toml
jelly/src/: jobs.rs  server.rs  utils.rs
jelly/src/accounts/: mod.rs
jelly/src/email/: common.rs  mod.rs  postmark.rs  sendgrid.rs  smtp.rs
jelly/src/forms/: password.rs
jelly/src/guards/: auth.rs
jelly/src/request/: request.rs
jelly/tests/: mail.rs
migrations/: 20220123190921_products.sql  20220123195109_orders.sql  20220123195136_order_items.sql  20220123195701_orders.sql  20220123205758_services.sql  20220123205957_order_service_items.sql  20220123210156_order_product_items.sql  20220123210505_orders.sql
src/: lib.rs  main.rs  pages.rs  test.csv
src/web/: mod.rs
src/web/accounts/jobs/: odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/web/accounts/views/: login.rs  utils.rs  (+3 more)
src/web/send/: mod.rs
src/web/upload/: mod.rs
static/assets/css/: app.css
static/assets/js/: scripts.js
templates/: contact.html  csv.html  help.html  index.html  layout.html  node.html
templates/accounts/: login.html
templates/dashboard/: index.html  layout.html
templates/email/: README.md  layout.html  odd-registration-attempt.html  odd-registration-attempt.txt  password-was-reset.html  password-was-reset.txt  reset-password.html  reset-password.txt  verify-account.html  verify-account.txt  welcome.html  welcome.txt
templates/send/: index.html
templates/upload/: file_uploaded_success.html  index.html
tests/: templates.rs
(+5 files in other folders)
