[package]
name = "livedev"
version = "0.1.0"
authors = ["cryptoishere <cryptoishere88@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.8"
jelly = { path = "jelly" }
log = "*"
serde = { version = "1" }
lettre = "0.10.0-rc.4"

[features]
default = ["jelly/template_watcher", "jelly/static"]
production = ["jelly/production"]
